--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body {
-	background-color: #777777;
-	font: Arial;
+	background-color: #888888;
+	font-family: "Arial", "Verdana";
 	color: #000000;
 }
 table {
 	border-collapse: collapse;
+}
+table, th, td {
 	border: 1px solid black;
+}
+th, td {
+	padding: 6px;
+	font-weight: bold;
 }
 td.dark {
 	background-color: #36393E;
